# grepxl

./: README.md  grepxl.py  pyproject.toml
data/: MOCK_DATA.xlsx
tests/: test_grepxl.py
