[project]
name = "grepxl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "rich-tools>=0.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
[project.scripts]
grepxl = "grepxl:main"
