[project]
name = "grepxl"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "python-calamine>=0.5.3",
    "rich-tools>=0.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
[project.scripts]
grepxl = "grepxl:main"
